kylin-display-switch (3.0.13kylin20) v101; urgency=medium

  * ChangeDesc1: 设置4种模式前调用控制面板的dbus以便告知控制面板同步当前状态

 -- hebing <hebing@kylinos.cn>  Wed, 30 Jun 2021 14:48:29 +0800

kylin-display-switch (3.0.13kylin19) v101; urgency=medium

  * ChangeDesc1: 底层也在响应XKB_KEY_XF86WLAN,KDS放弃控制
    · V10SP1 【内测】
      - BUG#  58453 【网络】快捷键开关WiFi无效

 -- hebing <hebing@kylinos.cn>  Fri, 25 Jun 2021 16:24:52 +0800

kylin-display-switch (3.0.13kylin18) v101; urgency=medium

  * ChangeDesc1: 适配PS/2触摸板没有厂商定制驱动情况下的触摸板热键 
  * ChangeDesc2: quilt -> native

 -- hebing <hebing@kylinos.cn>  Mon, 21 Jun 2021 16:51:24 +0800

kylin-display-switch (3.0.13kylin17) v101; urgency=medium

  * ChangeDesc1: 通过监控USD的大写锁定、小键盘锁定的GSettings弹出状态提示图标
    · V10SP1 0610 【青松D2000】
      - BUG#  59093 【亮剑行动】【长城嘉翔一体机】【双屏】win+P来回切换镜像屏与扩展屏会出现桌面不显示现象  

 -- hebing <hebing@kylinos.cn>  Thu, 10 Jun 2021 19:48:48 +0800

kylin-display-switch (3.0.13kylin16) v101; urgency=medium

  * ChangeDesc1: 通过监控USD的大写锁定、小键盘锁定的GSettings弹出状态提示图标
    · V10SP1 0610
      - BUG#  50704 【大小写】大小写提示图标和键盘大小写状态相反

 -- hebing <hebing@kylinos.cn>  Fri, 04 Jun 2021 17:34:24 +0800

kylin-display-switch (3.0.13kylin15) v101; urgency=medium

  * ChangeDesc1: 屏蔽右下角飞行模式的注册函数
    · V10SP1 0521-1
      - DEMAND# 6533 任务栏内隐藏飞行模式按钮

 -- hebing <hebing@kylinos.cn>  Sun, 30 May 2021 11:47:29 +0800

kylin-display-switch (3.0.13kylin14) v101; urgency=medium

  * 解决BUG#42405【系统投屏】切换主屏，当前实际主屏和osd显示的第一屏幕不一致（系统投屏的第一屏幕没有改变）
     PS: 根据测试的建议，隐藏win+P界面的第一屏提示信息
    

 -- hebing <hebing@kylinos.cn>  Thu, 25 Mar 2021 15:44:33 +0800

kylin-display-switch (3.0.13kylin13) v101; urgency=medium

  * 解决BUG#44084 【双屏】使用win+p切换为扩展模式，鼠标概率性出现在扩展屏幕

 -- hebing <hebing@kylinos.cn>  Thu, 25 Mar 2021 15:44:33 +0800

kylin-display-switch (3.0.13kylin12) v101; urgency=medium

  * 飞行模式托盘程序状态支持动态变化

 -- hebing <hebing@kylinos.cn>  Sun, 21 Mar 2021 15:49:34 +0800

kylin-display-switch (3.0.13kylin11) v101; urgency=medium

  * WiFi的状态图标文件异常，更新
